--- a/.github/workflows/fe.yaml
+++ b/.github/workflows/fe.yaml
@@ -28,7 +28,6 @@ jobs:
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        working-directory: ${{ env.working-directory }}
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./dist
+          publish_dir: ${{ env.working-directory }}/dist
