--- a/fe-src/.env
+++ b/fe-src/.env
@@ -1,2 +1,2 @@
 REACT_APP_STRAVA_CLIENT_ID=57858
-REACT_APP_API_BASE=https://eltan.in/buttes-chaumont/api
+REACT_APP_API_BASE=https://stefanoschrs.com/buttes-chaumont.fr/api
